# totems

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-04-27-totems.md  2026-04-28-project-totems-google-calendar.md  2026-05-17-per-box-bullet-colors.md
docs/superpowers/specs/: 2026-04-27-totems-design.md  2026-04-28-project-totems-google-calendar-design.md  2026-05-17-per-box-bullet-colors-design.md
src/totems/: __main__.py  block_window.py  config.py  content.py  scheduler.py  settings_web.py  settings_window.py  timebox.py  timebox_window.py  totem_symbols.py
src/totems/defaults/: quotes.txt  wisdom.txt
src/totems/duty_sources/: __init__.py  google_calendar.py  textfile.py
tests/: test_block_window_smoke.py  test_config.py  test_content.py  test_main.py  test_scheduler.py  test_settings_web.py  test_settings_window.py  test_smoke.py  test_timebox.py  test_timebox_window_smoke.py  test_totem_symbols.py
tests/duty_sources/: _fixtures.py  test_factory.py  test_google_calendar.py  test_textfile.py
