[project]
name = "totems"
version = "0.1.0"
description = "Wall-clock soft-block reminder window with a ritual-phrase escape hatch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icalendar>=5.0",
    "recurring-ical-events>=2.1",
]

[project.scripts]
totems = "totems.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/totems"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
